# scala-mandelbrot

./: .gitignore  README.md  build.sbt
native/mandelbrot/: Cargo.toml  build.rs
native/mandelbrot/src/: errors.rs  lib.rs  mandelbrot.cu  mandelbrot.hpp  mandelbrot.rs  video.rs
src/main/scala/: ComplexNumber.scala  MandelbrotExport.scala  Native.java  UnsignedInt.java  ZoomAnimation.scala  colors.scala  main.scala  mandelbrot.scala
src/main/scala/gui/: MandelbrotGui.scala
